<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/purple_480x854" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="start"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:text="@string/textView1"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="start"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/textView2"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:paddingBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/case1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_black95_press_white"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scaleType="fitStart"
            android:text="@string/play"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="40dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="25"
                android:layout_height="60dp">

                <Button
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:layout_weight="1"
                    android:text="@string/sanswer1"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:layout_weight="1"
                    android:text="@string/sanswer2"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:paddingBottom="200dp">
                <Button
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:layout_weight="1"
                    android:text="@string/sanswer3"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/answer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:layout_weight="1"
                    android:text="@string/sanswer4"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="25"
            android:layout_height="60dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_stroke_black95_press_white"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textSize="24dp"
                android:textColor="@color/red"
                android:gravity="center"
                android:textAllCaps="false"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_stroke_black95_press_white"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textSize="24dp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:textAllCaps="false"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>