<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="220dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="166dp"
            android:layout_height="39dp"
            android:layout_marginHorizontal="@android:dimen/thumbnail_width"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnStart"
            android:textColor="@color/black95"
            android:textSize="30sp" />


        <Button
            android:id="@+id/btnParams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@android:dimen/thumbnail_width"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnPrams"
            android:textColor="@color/black95"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@android:dimen/thumbnail_width"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnExit"
            android:textColor="@color/black95"
            android:textSize="30sp" />

    </LinearLayout>


</RelativeLayout>