<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<ImageView
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/purple_480x854" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/result"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/winner"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:textColor="@color/gold"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/gold"
            android:textSize="40dp"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/case1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/case2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_stroke_black95_press_white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>